@@ -145,6 +145,10 @@ API Changes
     constructor and fields from package to protected. (Shai Erera
     via Doron Cohen) 
 
+24. LUCENE-1375: Added convencience method IndexCommit.getTimestamp,
+    which is equivalent to
+    getDirectory().fileModified(getSegmentsFileName()).  (Mike McCandless)
+
 Bug fixes
     
  1. LUCENE-1134: Fixed BooleanQuery.rewrite to only optimize a single 
